4年戦績を更新

--- a/public/index.html
+++ b/public/index.html
@@ -570,6 +570,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.05.04] バオムFCカップカップ 準優勝</li>
                   <li>- [2024.02.04] 平間カップ U-9大会　優勝</li>
                   <li>- [2024.01.20] FCレガーレわくわくカップ U9　優勝</li>
                   <li>- [2023.12.16] U-9川崎市秋季サッカー大会2023 ベスト8</li>
@@ -595,9 +596,11 @@
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <button type="button" class="btn btn-secondary">2024年</button>
                   <a class="btn btn-primary"
-                    href="https://drive.google.com/file/d/1MtO9yy-C4MdXjTveEqD-IIo9He7IXlLw/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1kycIxjBCiPtLTASn_3ZDUOnBwwKAUhz_/view?usp=sharing"
+                    role="button" target="_blank">2024年</a>
+                  <a class="btn btn-primary"
+                    href="https://drive.google.com/file/d/16Lna8l76yBejm1MX_s2f9ae4r5ewT4mc/view?usp=sharing"
                     role="button" target="_blank">2023年</a>
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/1ZEfCIe-zl75vhNqaB_Z-J21-o5h28t4Y/view?usp=share_link"
