1年生主な戦績を追記

--- a/public/index.html
+++ b/public/index.html
@@ -732,7 +732,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- </li>
+                  <li>- [2024.07.15] 2024年度 ラゾクラ・サマーカップ 1年生大会 優勝</li>
                 </ul>
               </div>
             </div>
