--- a/public/index.html
+++ b/public/index.html
@@ -570,6 +570,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.08.11-13] 富士住建CUP Bカテゴリー 3位</li>
                   <li>- [2024.05.04] バオムFCカップカップ 準優勝</li>
                   <li>- [2024.02.04] 平間カップ U-9大会　優勝</li>
                   <li>- [2024.01.20] FCレガーレわくわくカップ U9　優勝</li>
