--- a/public/index.html
+++ b/public/index.html
@@ -628,6 +628,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.10.12-14] U9 ACラゾーレカップ 2024(波崎) 準優勝</li>
+                  <li>- [2024.09.28] FC LEGARE CUP ブルー 準優勝・ホワイト 3位</li>
+                  <li>- [2024.09.16] ホワイト 第18回 R.F.C CUP 優勝</li>
                   <li>- [2024.08.11-13] 富士住建CUP Bカテゴリー ベスト4</li>
                   <li>- [2024.05.05] FC明浜カップ U9大会 準優勝</li>
                   <li>- [2024.02.12] TADOカップ U8サッカー大会 優勝</li>
