--- a/public/index.html
+++ b/public/index.html
@@ -687,7 +687,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2016_20230705.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2016.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
