--- a/public/index.html
+++ b/public/index.html
@@ -628,6 +628,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.12.07] 安藤杯(ホワイト) 優勝</li>
                   <li>- [2024.11.10] 第5回 シューターズカップ(U-9大会) 優勝</li>
                   <li>- [2024.10.12-14] U9 ACラゾーレカップ 2024(波崎) 準優勝</li>
                   <li>- [2024.09.28] FC LEGARE CUP ブルー 準優勝・ホワイト 3位</li>
