--- a/public/index.html
+++ b/public/index.html
@@ -692,6 +692,16 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.1.11-13] MAMEDOFC CUP 準優勝</li>
+                  <li>- [2024.12.26] JFC FUTURO FINAL CUP 2024 優勝</li>
+                  <li>- [2024.12.15] 多摩ジュニアSC杯 3位</li>
+                  <li>- [2024.09.16] FCレガーレ招待杯 準優勝</li>
+                  <li>- [2024.08.12] ラゾクラック杯 優勝</li>
+                  <li>- [2024.07.15] ラゾクラック杯 3位</li>
+                  <li>- [2024.07.14] サウス×鷹カップ 3位</li>
+                  <li>- [2024.06.23] 川崎市春季低学年大会 ベスト8</li>
+                  <li>- [2024.06.16] TADOなかよしカップ 準優勝</li>
+                  <li>- [2024.05.12] WAKABA CUPU8大会 優勝</li>
                   <li>- [2024.04.29] 第8回 中原区長杯 春季低学年サッカー大会 優勝</li>
                   <li>- [2024.03.30] TADO U7 ステップアップ大会 優勝</li>
                   <li>- [2024.01.28] U-7 ATHLEAD CHALLENGE LEAGUE 準優勝</li>
