--- a/public/index.html
+++ b/public/index.html
@@ -152,22 +152,22 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2024.05.05</h4>
+            <h4 class="info-date">2025.01.26</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             <a href="#result_6">U-12 (6年生)</a><br>
-            <a href="https://kawasaki-fa.com/u12/2024_saitou_20240505_01/" target="_blank">斎藤旗争奪第46回川崎市春季少年サッカー大会 にて 優勝</a> いたしました。<br>
+            <a href="https://kawasaki-fa.com/u12/2024_matsumura-b_20250126_01/" target="_blank">第43回 松村杯 秋季少年少女サッカー大会(少年の部) にて 3位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/C6szRqPB01y/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+            <br>(当日の様子は <a href="https://www.instagram.com/p/DFUyzRFBHpf/?img_index=2&igsh=czJ5NXRtYWpvODhs"
               target="_blank">FC中原 Instagram</a> でもご紹介しています)
           </div>
 
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+          <!-- <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2024.04.05</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             新年度(2024年度) に対応いたしました。
-          </div>
+          </div> -->
         </div>
       </div>
 
