--- a/public/index.html
+++ b/public/index.html
@@ -152,13 +152,24 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2025.02.01</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            <a href="#result_6">U-9 (3年生)</a><br>
+            <a href="https://kawasaki-fa.com/u12/2024_u-9_20250202_01/" target="_blank">U9川崎市秋季サッカー大会 にて 4位</a> となりました。<br>
+            <br>たくさんの応援、誠にありがとうございました。
+            <br>(当日の様子は <a href="https://www.instagram.com/p/DFtUy5yz_zT/"
+              target="_blank">FC中原 Instagram</a> でもご紹介しています)
+          </div>
+
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2025.01.26</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             <a href="#result_6">U-12 (6年生)</a><br>
             <a href="https://kawasaki-fa.com/u12/2024_matsumura-b_20250126_01/" target="_blank">第43回 松村杯 秋季少年少女サッカー大会(少年の部) にて 3位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/DFUyzRFBHpf/?img_index=2&igsh=czJ5NXRtYWpvODhs"
+            <br>(当日の様子は <a href="https://www.instagram.com/p/DFUyzRFBHpf/"
               target="_blank">FC中原 Instagram</a> でもご紹介しています)
           </div>
 
@@ -628,6 +639,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.02.01] U9川崎市秋季サッカー大会 中原ホワイト第4位</li>
                   <li>- [2024.12.07] 安藤杯(ホワイト) 優勝</li>
                   <li>- [2024.11.10] 第5回 シューターズカップ(U-9大会) 優勝</li>
                   <li>- [2024.10.12-14] U9 ACラゾーレカップ 2024(波崎) 準優勝</li>
