--- a/public/index.html
+++ b/public/index.html
@@ -917,19 +917,12 @@
       <div class="row mb-5 justify-content-center">
         <div class="col-md-8 text-center">
           <h1 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">ソーシャルアカウント（SNS）</h1>
-          <p class="lead" data-aos="fade-up" data-aos-delay="100">FacebookやInstagramでも情報発信をしています。ぜひフォローをお願いします。</p>
+          <p class="lead" data-aos="fade-up" data-aos-delay="100">Instagramでも情報発信をしています。ぜひフォローをお願いします。</p>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6 text-center">
-          <p class="mb-4">
-            <a href="https://www.facebook.com/fcnakahararegina/" target="_blank">
-              <span class="icon-facebook d-block h4 text-primary"></span>
-              <span>Facebook / FC中原レジーナ</span>
-            </a>
-          </p>
-        </div>
-        <div class="col-md-6 text-center">
+
+        <div class="col-md-12 text-center">
           <p class="mb-0">
             <a href="https://www.instagram.com/fcnakahara.1992/" target="_blank">
               <span class="icon-instagram d-block h4 text-primary"></span>
