2025年度の更新。少女の記載変更。学年変更。

--- a/public/index.html
+++ b/public/index.html
@@ -152,10 +152,17 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2025.04.01</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            新年度(2025年度) に対応いたしました。
+          </div>
+
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2025.02.01</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_6">U-9 (3年生)</a><br>
+            <a href="#result_4">U-9 (3年生)</a><br>
             <a href="https://kawasaki-fa.com/u12/2024_u-9_20250202_01/" target="_blank">U9川崎市秋季サッカー大会 にて 4位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
             <br>(当日の様子は <a href="https://www.instagram.com/p/DFtUy5yz_zT/"
@@ -173,12 +180,6 @@
               target="_blank">FC中原 Instagram</a> でもご紹介しています)
           </div>
 
-          <!-- <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2024.04.05</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            新年度(2024年度) に対応いたしました。
-          </div> -->
         </div>
       </div>
 
@@ -250,7 +251,7 @@
             </div>
             <div>
               <h3>対象年齢</h3>
-              <p>キッズ（年中・年長）、小学１〜６年生、レジーナ（女子チーム）で活動しています。</p>
+              <p>キッズ（年中・年長）、小学１〜６年生、少女（大会参加）で活動しています。</p>
             </div>
           </div>
         </div>
@@ -271,7 +272,7 @@
             <div class="unit-4-icon mr-4"><span class="text-primary"><img src="fonts/flaticon/cup64.png"></span></div>
             <div>
               <h3>費用</h3>
-              <p>部費は年間、キッズ¥6000、少女¥12000、小学１年生～２年生¥24000、小学３年生～６年生¥36000 となります。</p>
+              <p>部費は年間、キッズ¥6000、小学１年生～２年生¥24000、小学３年生～６年生¥36000 となります。</p>
             </div>
           </div>
         </div>
@@ -404,7 +405,7 @@
                   <h3>体験入部への申込み</h3>
                   <p>
                     <a href="#team-schedule">スケジュール</a>で練習日を確認の上、<a
-                      href="#contact-section">お問い合わせフォーム</a>より、以下の必要事項をご連絡ください。
+                      href="#contact-section">お問い合わせ</a>より、以下の必要事項をご連絡ください。
                   </p>
                   <ul class="list-unstyled ul-check success">
                     <li>参加希望日</li>
@@ -462,65 +463,6 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2012_20240505.jpg" alt="Image" class="img-fluid team-photo">
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2024.05.05] 斎藤旗争奪第46回川崎市春季少年サッカー大会 ブルー：優勝　ホワイト：ベスト32</li>
-                  <li>- [2024.02.17] 第15回川崎ケーブルテレビ杯新人戦 ベスト4</li>
-                  <li>- [2023.10.14] ハンガリー大使館杯 U-11川崎市秋季サッカー大会2023 3位</li>
-                  <li>- [2023.06.25] 第35回八王子いちょう杯 5年生大会 優勝</li>
-                  <li>- [2022-23 season] Colorful LEAGUE U-10：優勝</li>
-                  <li>- [2023.01.29] 日産CUP 低学年の部 ブロック大会：優勝　中央大会：ベスト16</li>
-                  <li>- [2022.11.19] 第41回小田原カップサッカーフェスティバル U10 優勝</li>
-                  <li>- [2022.06.25] かわしん杯 ホワイト：ベスト8 ブルー：ベスト16</li>
-                  <li>- [2022.03.06] 長谷工PREMIER LEAGUE Kanagawa U-9 優勝</li>
-                  <li>- [2021.11.23] Ｎリーグ（Aリーグ） 優勝</li>
-                  <li>- [2021.09.11] Ｎリーグ（Ｂリーグ） 優勝</li>
-                  <li>- [2020.12.20] 川崎低学年大会チャンピオンズリーグ 優勝</li>
-                  <li>- [2020.10.25] 川崎市中原区春季低学年大会 優勝</li>
-                  <li>- [2020.07.24] 全力蹴球カップ 3位</li>
-                  <li>- [2020.02.01] 平間カップ 準優勝</li>
-                  <li>- [2020.01.13] 大ヶ谷戸杯 ブルー優勝 ホワイト5位</li>
-                  <li>- [2019.12.15] フレネミー杯 優勝</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 col-md-5 card-footer-title">
-                各年度の試合結果
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result6.htm" role="button"
-                    target="_blank">2024年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result5.htm" role="button"
-                    target="_blank">2023年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result4.htm" role="button"
-                    target="_blank">2022年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result3.htm" role="button"
-                    target="_blank">2021年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result2.htm" role="button"
-                    target="_blank">2020年</a>
-                  <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result1.htm" role="button"
-                    target="_blank">2019年</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card-result" id="result_5">
-        <div class="card mb-4 shadow-sm" data-aos="fade-up">
-          <div class="card-header">
-            <h3>5年生</h3>
-          </div>
-          <div class="card-body text-primary">
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-5 team-photo-box">
                 <img src="images/fc2013.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
@@ -569,10 +511,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_4">
+      <div class="card-result" id="result_5">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>4年生</h3>
+            <h3>5年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -627,10 +569,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_3">
+      <div class="card-result" id="result_4">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>3年生</h3>
+            <h3>4年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -692,10 +634,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_2">
+      <div class="card-result" id="result_3">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>2年生</h3>
+            <h3>3年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -748,10 +690,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_1">
+      <div class="card-result" id="result_2">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>1年生</h3>
+            <h3>2年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -789,6 +731,43 @@
         </div>
       </div>
 
+      <div class="card-result" id="result_1">
+        <div class="card mb-4 shadow-sm" data-aos="fade-up">
+          <div class="card-header">
+            <h3>1年生</h3>
+          </div>
+          <div class="card-body text-primary">
+            <div class="row justify-content-center">
+              <div class="col-lg-6 col-md-5 team-photo-box">
+                <!--<img src="images/" alt="Image" class="img-fluid team-photo"> -->
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- Comming Soon...</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="row justify-content-center">
+              <div class="col-lg-3 col-md-5 card-footer-title">
+                各年度の試合結果
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
+                  <button type="button" class="btn btn-secondary">2030年</button>
+                  <button type="button" class="btn btn-secondary">2029年</button>
+                  <button type="button" class="btn btn-secondary">2028年</button>
+                  <button type="button" class="btn btn-secondary">2027年</button>
+                  <button type="button" class="btn btn-secondary">2026年</button>
+                  <button type="button" class="btn btn-secondary">2025年</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="card-result" id="result_girl">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
@@ -808,6 +787,9 @@
                 </ul>
               </div>
             </div>
+          </div>
+          <div class="card-footer">
+            各学年チームでの日々の活動に加え、主に4年生から6年生の女子選手は少女の大会にも参加しております。
           </div>
         </div>
       </div>
