お問い合わせの表記から少女を削除

--- a/public/index.html
+++ b/public/index.html
@@ -922,7 +922,7 @@
       <div class="row mb-5">
         <div class="col-12 text-center" data-aos="fade">
           <h1 class="section-title mb-0">お問い合わせ</h1>
-          <p><a href="#team-trial">体験入部</a>や練習試合は随時受け付けております。対象学年(キッズ、小学１～６年生、少女)を明記し、メールにてご連絡ください。</p>
+          <p><a href="#team-trial">体験入部</a>や練習試合は随時受け付けております。学年(キッズ、小学１～６年生)を明記し、メールにてご連絡ください。</p>
         </div>
       </div>
 
