--- a/public/index.html
+++ b/public/index.html
@@ -646,7 +646,11 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2025.1.11-13] MAMEDOFC CUP 準優勝</li>
+                  <li>- [2025.02.09] 平間SC杯 優勝</li>
+                  <li>- [2025.02.11] メリオール杯 準優勝</li>
+                  <li>- [2025.02.22-24] ACラゾーレ杯 優勝</li>
+                  <li>- [2025.03.20] ラゾクラック杯 優勝</li>
+                  <li>- [2025.01.11-13] MAMEDOFC CUP 準優勝</li>
                   <li>- [2024.12.26] JFC FUTURO FINAL CUP 2024 優勝</li>
                   <li>- [2024.12.15] 多摩ジュニアSC杯 3位</li>
                   <li>- [2024.09.16] FCレガーレ招待杯 準優勝</li>
@@ -676,7 +680,9 @@
                   <button type="button" class="btn btn-secondary">2028年</button>
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary"
+                  href="https://docs.google.com/spreadsheets/d/e/2PACX-1vT2OhuUNSEmfZFP61MEpA6nqLz0slpkOLyI0w2AZ99jaHhqhpPoY68-37oWTV7DYmpBARoH_ZyF7G2g/pubhtml?gid=1778863316&single=true"
+                  role="button" target="_blank">2025年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOaanqmKbsyEGwltB2T1pbNEv5KoA-Or1sFpmpvLtklyQDTYEIvfR-DX8U1Lg1TkRCjox5OKa_kNie/pubhtml?gid=1778863316&single=true"
                     role="button" target="_blank">2024年</a>
