FC2017 2025年度試合結果リンク追加

--- a/public/index.html
+++ b/public/index.html
@@ -726,7 +726,9 @@
                   <button type="button" class="btn btn-secondary">2028年</button>
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vR3LCBgqIVMjcpTHIcLAWXkdvoNnnpzs5-SsL9bWFIhaMOGMbQ5jy3Fa2qCFVe7rw/pubhtml"
+                    role="button" target="_blank">2025年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/1L2IsbiNOGvv5scYU3Y8iAH7P4cbB80tA/edit#gid=728770359"
                     role="button" target="_blank">2024年</a>
