FC2015 試合結果へのリンクを追記

--- a/public/index.html
+++ b/public/index.html
@@ -617,7 +617,9 @@
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=479910482&single=true"
+                    role="button" target="_blank">2025年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=1142856459&single=true"
                     role="button" target="_blank">2024年</a>
