--- a/public/index.html
+++ b/public/index.html
@@ -581,6 +581,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.04.06] SpringCup山中湖 U-10大会 優勝</li>
                   <li>- [2025.02.01] U9川崎市秋季サッカー大会 中原ホワイト第4位</li>
                   <li>- [2024.12.07] 安藤杯(ホワイト) 優勝</li>
                   <li>- [2024.11.10] 第5回 シューターズカップ(U-9大会) 優勝</li>
