--- a/public/index.html
+++ b/public/index.html
@@ -754,7 +754,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- Comming Soon...</li>
+                  <li>- Comming Soon....</li>
                 </ul>
               </div>
             </div>
