--- a/public/index.html
+++ b/public/index.html
@@ -750,7 +750,7 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <!--<img src="images/" alt="Image" class="img-fluid team-photo"> -->
+                <img src="images/fc2018_01.jpeg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
@@ -771,7 +771,9 @@
                   <button type="button" class="btn btn-secondary">2028年</button>
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/1-mJD0C_k9CKjEMUF8xrgMR0cq7cWzrzYw2rH1Pv5OI8/edit?usp=drivesdk"
+                    role="button" target="_blank">2025年</a>
                 </div>
               </div>
             </div>
