FC2015 かわしん準優勝をお知らせに追記

--- a/public/index.html
+++ b/public/index.html
@@ -150,36 +150,23 @@
         </div>
 
         <div class="row justify-content-center">
-
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2025.07.03</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            <a href="#result_4">U-10 (4年生)</a><br>
+            <a href="https://kawasaki-fa.com/u12/2025_kawashin_20250629_01/" target="_blank">第32回かわしん杯ジュニアサッカー大会 にて 準優勝</a> となりました。<br>
+            <br>たくさんの応援、誠にありがとうございました。
+            <br>(当日の様子は <a href="https://www.instagram.com/p/DLn_Nm8TQul"
+            target="_blank">FC中原 Instagram</a> でもご紹介しています)
+          </div>
+          
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2025.04.06</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             新年度(2025年度) に対応いたしました。
           </div>
-
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2025.02.01</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_4">U-9 (3年生)</a><br>
-            <a href="https://kawasaki-fa.com/u12/2024_u-9_20250202_01/" target="_blank">U9川崎市秋季サッカー大会 にて 4位</a> となりました。<br>
-            <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/DFtUy5yz_zT/"
-              target="_blank">FC中原 Instagram</a> でもご紹介しています)
-          </div>
-
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2025.01.26</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_6">U-12 (6年生)</a><br>
-            <a href="https://kawasaki-fa.com/u12/2024_matsumura-b_20250126_01/" target="_blank">第43回 松村杯 秋季少年少女サッカー大会(少年の部) にて 3位</a> となりました。<br>
-            <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/DFUyzRFBHpf/"
-              target="_blank">FC中原 Instagram</a> でもご紹介しています)
-          </div>
-
         </div>
       </div>
 
