--- a/public/index.html
+++ b/public/index.html
@@ -481,7 +481,7 @@
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <a class="btn btn-primary" href="https://drive.google.com/file/d/1wwDp99t1nXDnru6kYXwVOdqFXbstrGk6/view?usp=sharing" role="button"
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZgNTN_P1lhy4U_FGlcJooXVBlHuNowN6yXyaUrqVLsmhBjjbj5tJHzI-XIHTN8w/pubhtml" role="button"
                     target="_blank">2024年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRtdBsWnQnUaW6PP84epTpyZAfxcWm_RnIBq237r2ZOit4QVVz78fHohd-QBLBQQ/pubhtml" role="button"
                     target="_blank">2023年</a>
