--- a/public/index.html
+++ b/public/index.html
@@ -480,7 +480,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-tL5DZKoUpapoEf8Q_CSxm4k8WZFSCI0JHFXbOIJQHocl8zymayk7Tlpw6KT4tw/pubhtml" role="button"
+                    target="_blank">2025年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZgNTN_P1lhy4U_FGlcJooXVBlHuNowN6yXyaUrqVLsmhBjjbj5tJHzI-XIHTN8w/pubhtml" role="button"
                     target="_blank">2024年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRtdBsWnQnUaW6PP84epTpyZAfxcWm_RnIBq237r2ZOit4QVVz78fHohd-QBLBQQ/pubhtml" role="button"
