--- a/public/index.html
+++ b/public/index.html
@@ -454,6 +454,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.05.03] 斉藤旗争奪春季大会 ベスト16</li>
+                  <li>- [2025.01.11] 川崎ケーブルテレビ杯 新人戦サッカー大会 ベスト32</li>
+                  <li>- [2024.10.06] ハンガリー大使館杯 ベスト16</li>
                   <li>- [2023.08.13] 富士住健CUP 御殿場ジュニアサッカー大会 3位</li>
                   <li>- [2023.06.24] かわしん杯 ブルー：ベスト16 ホワイト：ベスト32</li>
                   <li>- [2022.12.17] 川崎ウィングス杯 準優勝</li>
