--- a/public/index.html
+++ b/public/index.html
@@ -454,11 +454,12 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2025.05.03] 斉藤旗争奪春季大会 ベスト16</li>
-                  <li>- [2025.01.11] 川崎ケーブルテレビ杯 新人戦サッカー大会 ベスト32</li>
-                  <li>- [2024.10.06] ハンガリー大使館杯 ベスト16</li>
+                  <li>- [2025.05.03] 斉藤旗争奪第47回川崎市春季少年サッカー大会 ベスト16</li>
+                  <li>- [2025.01.11] 第16回川崎ケーブルテレビ杯 新人戦サッカー大会 ベスト32</li>
+                  <li>- [2024.10.06] ハンガリー大使館杯U-11川崎市秋季サッカー大会 ベスト16</li>
+                  <li>- [2024.06.30] 第36回八王子いちょう杯5年生大会 4位</li>
                   <li>- [2023.08.13] 富士住健CUP 御殿場ジュニアサッカー大会 3位</li>
-                  <li>- [2023.06.24] かわしん杯 ブルー：ベスト16 ホワイト：ベスト32</li>
+                  <li>- [2023.06.24] 第30回かわしん杯 ブルー：ベスト16 ホワイト：ベスト32</li>
                   <li>- [2022.12.17] 川崎ウィングス杯 準優勝</li>
                   <li>- [2022.09.11] リバーカップ 準優勝</li>
                   <li>- [2022.03.21] ラゾクラック杯2年生大会 準優勝</li>
