--- a/public/index.html
+++ b/public/index.html
@@ -454,9 +454,9 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2025.05.03] 斉藤旗争奪第47回川崎市春季少年サッカー大会 ベスト16</li>
-                  <li>- [2025.01.11] 第16回川崎ケーブルTV杯 新人戦サッカー大会 ベスト32</li>
-                  <li>- [2024.10.06] ハンガリー大使館杯川崎市秋季サッカー大会 ベスト16</li>
+                  <li>- [2025.05.03] 斉藤旗争奪第47回川崎市春季大会 ベスト16</li>
+                  <li>- [2025.01.11] 第16回川崎ケーブルTV杯 新人戦 ベスト32</li>
+                  <li>- [2024.10.06] ハンガリー大使館杯川崎市秋季大会 ベスト16</li>
                   <li>- [2024.06.30] 第36回八王子いちょう杯5年生大会 4位</li>
                   <li>- [2023.08.13] 富士住健CUP 御殿場ジュニアサッカー大会 3位</li>
                   <li>- [2023.06.24] 第30回かわしん杯 ブルー：ベスト16 ホワイト：ベスト32</li>
