5年戦績更新

--- a/public/index.html
+++ b/public/index.html
@@ -541,7 +541,9 @@
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2026年</button>
-                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/1zJ4XH28sHGYo7KgOZZmpysE9qnd70Ctn/edit?usp=sharing&ouid=100557551206649904590&rtpof=true&sd=true"
+                    role="button" target="_blank">2025年</a>
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/1P1ajaJ4E1BydLPvCvgx0IsT8iN6v_mu2/view?usp=sharing"
                     role="button" target="_blank">2024年</a>
