--- a/public/index.html
+++ b/public/index.html
@@ -575,6 +575,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.8.15-17] あおぞらCUPジュニアサッカーフェスティバル U10 FC中原-C 優勝/FC中原-B 準優勝/FC中原-A 3位</li>
                   <li>- [2025.07.21] YSGEM かまぼこCup U10大会 準優勝</li>
                   <li>- [2025.07.21] U10 国府津FC サマーチャレンジカップ 準優勝</li>
                   <li>- [2025.06.29] 第32回かわしん杯ジュニアサッカー大会 準優勝</li>
