--- a/public/index.html
+++ b/public/index.html
@@ -647,6 +647,16 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2025.09.14-15] NIKE ANTLERS CUP U-9 4位</li>
+                  <li>- [2025.08.02-03] アントラーズサマーカップ 準優勝</li>
+                  <li>- [2025.07.21] ラゾクラック杯 中原ホワイト 優勝</li>
+                  <li>- [2025.07.05] 全力蹴球カップ 準優勝</li>
+                  <li>- [2025.05.11] FC名浜カップU9大会 優勝</li>
+                  <li>- [2025.05.05] FCレガーレ招待杯 中原ブルー 優勝、中原ホワイト 4位</li>
+                  <li>- [2025.05.04] Pass the Ball Man 2025 準優勝</li>
+                  <li>- [2025.05.03] カルペソールGWカップ 準優勝</li>
+                  <li>- [2025.05.03] 入二カップ 優勝(ホワイト)</li>
+                  <li>- [2025.04.27] INFINITY CUP 優勝</li>
                   <li>- [2025.02.09] 平間SC杯 優勝</li>
                   <li>- [2025.02.11] メリオール杯 準優勝</li>
                   <li>- [2025.02.22-24] ACラゾーレ杯 優勝</li>
