--- a/public/index.html
+++ b/public/index.html
@@ -754,7 +754,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>- Comming Soon....</li>
+		  <li>- [2025.10.04] 2025 KOMUGURAリーグ(前期) U-7 優勝</li>
                 </ul>
               </div>
             </div>
