--- a/public/index.html
+++ b/public/index.html
@@ -762,6 +762,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+		  <li>- [2025.07.21] U-7 メリオールカップ 3位</li>
 		  <li>- [2025.10.04] 2025 KOMUGURAリーグ(前期) U-7 優勝</li>
                 </ul>
               </div>
