お知らせにハンガリー大使館杯 3位を追加

--- a/public/index.html
+++ b/public/index.html
@@ -151,12 +151,14 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2025.07.03</h4>
+            <h4 class="info-date">2025.10.11</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_4">U-10 (4年生)</a><br>
-            <a href="https://kawasaki-fa.com/u12/2025_kawashin_20250629_01/" target="_blank">第32回かわしん杯ジュニアサッカー大会 にて 準優勝</a> となりました。<br>
+            <a href="#result_5">U-11 (5年生)</a><br>
+            <a href="https://kawasaki-fa.com/u12/2025_hungary_20251011_01/" target="_blank">ハンガリー大使館杯 U-11 川崎市秋季サッカー大会2025 にて 3位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
+            
+            <!--
             <br>(当日の様子は <a href="https://www.instagram.com/p/DLn_Nm8TQul"
             target="_blank">FC中原 Instagram</a> でもご紹介しています)
           </div>
@@ -167,6 +169,7 @@
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             新年度(2025年度) に対応いたしました。
           </div>
+        -->
         </div>
       </div>
 
